<resources>
    <string name="app_name">VMovie</string>

    <string name="action_sign_in">立即登录</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="prompt_password">密码</string>
    <string name="prompt_username">用户名</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>

    <string name="returned_from_app_settings_to_activity">
        Returned from app settings to MainActivity with the following permissions:
        \n\nIntnet: %s
    </string>

    <string name="internet_permission">该应用需要网络权限</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="register">注册</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- -->
    <string name="intheater">正在热映</string>
    <string name="comingsoon">即将上映</string>
    <string name="top250">Top250</string>
    <string name="usbox">欧美票房榜</string>
</resources>
