<?xml version="1" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.v7.widget.Toolbar
                    android:id="@+id/login_toolbar"
                    android:paddingTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <Button
                            android:id="@+id/login_register"
                            android:textSize="24sp"
                            android:textColor="@color/white"
                            android:gravity="center"
                            android:background="?android:selectableItemBackground"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/register"
                            android:layout_alignParentRight="true" />
                    </RelativeLayout>
                </android.support.v7.widget.Toolbar>
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/login_image"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/user" />
                <android.support.design.widget.TextInputLayout
                    android:textColorHint="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">
                    <EditText
                        android:textColor="@color/white"
                        android:textColorHighlight="@color/white"
                        android:textColorHint="@color/white"
                        android:id="@+id/login_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_username"
                        android:maxLines="1"
                        android:inputType="textEmailAddress" />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:textColorHint="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:textColor="@color/white"
                        android:id="@+id/login_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:maxLines="1"
                        android:inputType="textPassword"
                        android:imeOptions="normal|actionUnspecified"
                        android:imeActionLabel="@string/action_sign_in_short" />
                </android.support.design.widget.TextInputLayout>
                <Button
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:id="@+id/login_sign"
                    android:background="@drawable/ripple_sign_in_background"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/action_sign_in"
                    style="?android:textAppearanceSmall" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
